tests/ui/pattern/issue-94866.stderr
error[E0004]: non-exhaustive patterns: `Enum::B` not covered
  --> $DIR/issue-94866.rs:10:11
   |
LL |     match Enum::A {
   |           ^^^^^^^ pattern `Enum::B` not covered
   |
note: `Enum` defined here
  --> $DIR/issue-94866.rs:7:6
   |
LL | enum Enum { A, B }
   |      ^^^^      - not covered
   = note: the matched value is of type `Enum`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~     Enum::A => m!(),
LL +     Enum::B => todo!()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
