tests/ui/pattern/issue-94866.rs
macro_rules! m {
    () => {
        {}
    };
}

enum Enum { A, B }

fn main() {
    match Enum::A {
    //~^ ERROR non-exhaustive patterns
    Enum::A => m!()
    }
}
